1. Added Migration to update Repos stars count. 2. Fixed Alignment.

--- a/app/assets/stylesheets/components/_repo-list.scss
+++ b/app/assets/stylesheets/components/_repo-list.scss
@@ -95,7 +95,7 @@
 
 .repo-item-issues {
   color: $base-font-color;
-  float: right;
+  float: left;
   font-size: $small-font-size;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -107,6 +107,9 @@
     position: relative;
     top: 3px;
     vertical-align: baseline;
+  }
+  .issue-icon {
+    margin-left: 0.7rem;
   }
 }
 
